# nn-stat

./: .gitignore  MANIFEST.in  README.md  create_stats.py  main.py  pyproject.toml  requirements.txt  setup.py
corr_out/: CURVE_param_acc__prm__steps_per_epoch.csv  SUMMARY.txt  TOP_param_param__all_epochs.csv  param_acc__all_epochs__global.csv  param_acc__all_epochs__metric__acc.csv  param_acc__all_epochs__metric__map.csv  param_acc__all_epochs__metric__ppl.csv  param_acc__all_epochs__task__img-captioning.csv  param_acc__all_epochs__task__img-classification.csv  param_acc__all_epochs__task__img-segmentation.csv  param_acc__all_epochs__task__txt-generation.csv  param_acc__all_epochs__task__txt-image.csv  param_acc__epoch_10__global.csv  param_acc__epoch_10__metric__acc.csv  param_acc__epoch_10__metric__clip.csv  param_acc__epoch_10__metric__iou.csv  param_acc__epoch_10__metric__ppl.csv  param_acc__epoch_10__task__img-captioning.csv  param_acc__epoch_10__task__img-classification.csv  param_acc__epoch_10__task__obj-detection.csv  param_acc__epoch_10__task__txt-generation.csv  param_acc__epoch_1__global.csv  param_acc__epoch_1__metric__acc.csv  param_acc__epoch_1__metric__clip.csv  param_acc__epoch_1__metric__map.csv  param_acc__epoch_1__metric__ppl.csv  param_acc__epoch_1__task__img-captioning.csv  param_acc__epoch_1__task__img-classification.csv  param_acc__epoch_1__task__img-segmentation.csv  param_acc__epoch_1__task__txt-generation.csv  param_acc__epoch_20__global.csv  param_acc__epoch_20__metric__acc.csv  param_acc__epoch_20__metric__bleu.csv  (+19 more)
data/: statistics.xlsx
(+196 files in other folders)
